feat: trigger pipeline

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,3 +32,10 @@ phases:
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
     finally:
      - echo Push completed on `date`
+artifacts:
+  files:
+    - imageDetail.json
+    - buildspec.yml
+    - taskdef.json
+    - appspec.yml
+    - imagedefinitions.json
