--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,10 +30,21 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - echo Writing image definitions file...
+      - printf '{"ImageURI":"'"$AWS_ACCOUNT_ID"'.dkr.ecr.'"$AWS_DEFAULT_REGION"'.amazonaws.com/'"$IMAGE_REPO_NAME"':'"$IMAGE_TAG"'"}' > imageDetail.json
+      - cat imageDetail.json
     finally:
      - echo Push completed on `date`
 artifacts:
-  files:
-    - imageDetail.json
-    - taskdef.json
-    - appspec.yml
+  files: 
+    - 'image*.json'
+    - 'appspec.yml'
+    - 'taskdef.json'
+  secondary-artifacts:
+    DefinitionArtifact:
+      files:
+        - appspec.yaml
+        - taskdef.json
+    ImageArtifact:
+      files:
+        - imageDetail.json
