--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
     AWS_DEFAULT_REGION: "us-east-1"
     AWS_ACCOUNT_ID: "666632162364"
     IMAGE_REPO_NAME: "ecs-devops-sandbox-repository"
-    IMAGE_TAG: "lastest"
+    IMAGE_TAG: "latest"
   
 phases:
   pre_build:
